--- a/index.html
+++ b/index.html
@@ -4,23 +4,6 @@
   <meta charset="UTF-8" />
   <title>Kitty Tiles – Privacy Policy & Terms of Service</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fafafa;
-      color: #333;
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      color: #222;
-    }
-    hr {
-      margin: 40px 0;
-    }
-  </style>
 </head>
 <body>
 
@@ -39,7 +22,7 @@ when you use our mobile game.
 <h3>Information We Collect</h3>
 <p>
 We do not collect personally identifiable information such as name, email address, or phone number.
-However, our app uses third-party services that may collect limited data automatically.
+However, the app uses third-party services that may collect limited data automatically.
 </p>
 
 <h3>Third-Party Services</h3>
@@ -53,27 +36,28 @@ to show ads and measure performance.
 <p>
 Ads are used to keep the app free and to improve the user experience.
 Personalized ads may be shown if you give permission via Apple's App Tracking Transparency prompt.
-You can choose not to allow tracking, and ads will still be displayed.
+If you choose not to allow tracking, ads will still be displayed.
 </p>
 
 <h3>Children’s Privacy</h3>
 <p>
 Kitty Tiles does not knowingly collect personal data from children under the age of 13.
-If you believe that a child has provided personal information, please contact us
-and we will take appropriate action.
 </p>
 
 <h3>Changes to This Policy</h3>
 <p>
-We may update this Privacy Policy from time to time.
+This Privacy Policy may be updated from time to time.
 Any changes will be posted on this page.
 </p>
 
 <h3>Contact</h3>
 <p>
-If you have questions about this Privacy Policy, you may contact us at:
+If you have questions about this Privacy Policy or the app,
+please visit our GitHub page:
 <br />
-<strong>Email:</strong> support@kittytiles.app
+<a href="https://github.com/tugcakilic17/kitty-tiles-legal" target="_blank">
+https://github.com/tugcakilic17/kitty-tiles-legal
+</a>
 </p>
 
 <hr />
@@ -94,8 +78,8 @@ You may not misuse the app or attempt to disrupt its operation.
 <h3>Ads and Purchases</h3>
 <p>
 The app may display advertisements.
-Optional in-app purchases or rewarded ads may be offered.
-All purchases are final and handled by the platform provider.
+Optional rewarded ads or in-app purchases may be offered.
+All purchases are handled by the platform provider.
 </p>
 
 <h3>Limitation of Liability</h3>
@@ -106,18 +90,15 @@ We are not responsible for any damages or losses resulting from the use of the a
 
 <h3>Changes to the App</h3>
 <p>
-We may update, modify, or discontinue parts of the app at any time
-without prior notice.
+We may update, modify, or discontinue parts of the app at any time without prior notice.
 </p>
 
 <h3>Governing Law</h3>
 <p>
-These terms are governed by applicable laws of your country of residence.
+These terms are governed by applicable laws.
 </p>
 
-<p>
-<strong>Thank you for playing Kitty Tiles!</strong>
-</p>
+<p><strong>Thank you for playing Kitty Tiles.</strong></p>
 
 </body>
 </html>
