--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
   <meta charset="UTF-8" />
   <title>Kitty Tiles – Privacy Policy & Terms of Service</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #ffffff;
+      color: #000000;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+    }
+
+    h1, h2, h3 {
+      margin-top: 24px;
+    }
+
+    hr {
+      margin: 40px 0;
+    }
+
+    a {
+      color: #000000;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
